--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ REACT_APP_API_KEY = 932abb19676c822ea035ea1f7b3c7d6b
 
 REACT_APP_IMAGE_BASE_URL = http://image.tmdb.org/t/p/
 
-REACT_APP_BACKDROP_SIZE = w500
-REACT_APP_POSTER_SIZE = w185
+REACT_APP_POSTER_SIZE = w780
+REACT_APP_PROFIL_SIZE = w185
 
